--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,9 @@
 name: Publish
 
 on:
-  release:
-    types: [ published ]
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -10,20 +11,15 @@ jobs:
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
-      - uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+
       - uses: actions/setup-python@v4
         with:
           python-version: 3.10
           cache: poetry
-      - run: poetry install
 
-      - name: Build distribution package
-        run: poetry build
-
-      - uses: actions/upload-artifact@v3
+      - uses: snok/install-poetry@v1
         with:
-          name: lib-dist
-          path: dist
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - run: poetry install
