Test artifact upload/download

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,11 +11,14 @@ jobs:
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/upload-pages-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
+          name: package-dist
           path: docs
+          retention-days: 1
 
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     timeout-minutes: 10
     permissions:
@@ -25,6 +28,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+      - uses: actions/download-artifact@v3
+        with:
+          name: package-dist
+
+      - name: Display structure of downloaded files
+        run: ls -R
