Test bash commands

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,36 +1,61 @@
 name: Publish
 
 on:
-  push:
-    branches:
-      - master
+  release:
+    types: [ published ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    outputs:
+      dist-file: ${{ steps.pack.outputs.dist-file }}
     steps:
       - uses: actions/checkout@v4
+#      - uses: pnpm/action-setup@v2
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: 18
+#          cache: pnpm
+#      - run: pnpm install
+
+#      - name: Build lib
+#        run: pnpm --filter "vuecomotive-scroll" lib:build
+#
+      - name: Pack distribution package
+        id: pack
+        working-directory: lib
+        run: |
+#          pnpm pack
+          echo "dist-file=$(find -name '*.tgz')" >> $GITHUB_OUTPUT
+          cp *.tgz ..
+
       - uses: actions/upload-artifact@v3
         with:
           name: package-dist
-          path: docs
+          path: ${{ steps.pack.outputs.dist-file }}
           retention-days: 1
 
-  deploy:
+  publish:
     needs: build
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+#    environment:
+#      name: npm
+#      url: https://www.npmjs.com/package/vuecomotive-scroll
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: package-dist
 
-      - name: Display structure of downloaded files
-        run: ls -R
+      - run: |
+          ls
+          find -name '*.tgz'
+          echo "${{ needs.build.outputs.dist-file }}"
+          if test -f "${{ needs.build.outputs.dist-file }}"; then echo "tar exists."; fi
+
+#      - name: Publish package distributions to NPM
+#        uses: JS-DevTools/npm-publish@v3
+#        with:
+#          token: ${{ secrets.NODE_AUTH_TOKEN }}
+#          package: ${{ needs.build.outputs.dist-file }}
