--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,14 +15,17 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Create changelog
-        id: changelog
         uses: heinrichreimer/action-github-changelog-generator@v2.3
         with:
           token: ${{ github.token }}
+          onlyLastTag: true
+          verbose: true
+          stripGeneratorNotice: true
+          stripHeaders: true
 
       - run: cat CHANGELOG.md
 
       - name: Create & publish release
         uses: softprops/action-gh-release@v0.1.15
         with:
-          body: ${{ steps.changelog.outputs.changelog }}
+          body_path: CHANGELOG.md
